// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders highlighted lines 1`] = `
<section
  className="sc-bdVaJa coSZVw LogPane"
>
  <div
    style={
      Object {
        "height": "0px",
      }
    }
  >
     
  </div>
  <span
    className="LogPaneLine"
    data-lineid={0}
  >
    <code
      className="LogPaneLine-content"
    >
      <span
        className={null}
        style={null}
      >
        hello

      </span>
    </code>
  </span>
  <span
    className="LogPaneLine"
    data-lineid={1}
  >
    <code
      className="LogPaneLine-content"
    >
      <span
        className={null}
        style={null}
      >
        world

      </span>
    </code>
  </span>
  <span
    className="LogPaneLine is-highlighted"
    data-lineid={2}
  >
    <code
      className="LogPaneLine-content"
    >
      <span
        className={null}
        style={null}
      >
        foo

      </span>
    </code>
  </span>
  <span
    className="LogPaneLine is-highlighted"
    data-lineid={3}
  >
    <code
      className="LogPaneLine-content"
    >
      <span
        className={null}
        style={null}
      >
        bar

      </span>
    </code>
  </span>
  <div
    className="sc-bwzfXH bPLpVx logEnd"
  >
    █
  </div>
</section>
`;

exports[`renders logs 1`] = `
<section
  className="sc-bdVaJa coSZVw LogPane"
>
  <div
    style={
      Object {
        "height": "0px",
      }
    }
  >
     
  </div>
  <span
    className="LogPaneLine"
    data-lineid={0}
  >
    <code
      className="LogPaneLine-content"
    >
      <span
        className={null}
        style={null}
      >
        hello

      </span>
    </code>
  </span>
  <span
    className="LogPaneLine"
    data-lineid={1}
  >
    <code
      className="LogPaneLine-content"
    >
      <span
        className={null}
        style={null}
      >
        world

      </span>
    </code>
  </span>
  <span
    className="LogPaneLine"
    data-lineid={2}
  >
    <code
      className="LogPaneLine-content"
    >
      <span
        className={null}
        style={null}
      >
        foo

      </span>
    </code>
  </span>
  <span
    className="LogPaneLine"
    data-lineid={3}
  >
    <code
      className="LogPaneLine-content"
    >
      <span
        className={null}
        style={null}
      >
        bar

      </span>
    </code>
  </span>
  <div
    className="sc-bwzfXH bPLpVx logEnd"
  >
    █
  </div>
</section>
`;

exports[`renders logs with leading whitespace and ANSI codes 1`] = `
<section
  className="sc-bdVaJa coSZVw LogPane"
>
  <div
    style={
      Object {
        "height": "8280px",
      }
    }
  >
     
  </div>
  <span
    className="LogPaneLine"
    data-lineid={276}
  >
    <code
      className="LogPaneLine-content"
    >
      <span
        className={null}
        style={null}
      >
          
      </span>
      <span
        className="ansi-blue"
        style={null}
      >
          │ 
      </span>
      <span
        className={null}
        style={null}
      >
        Done in: 2.636s

      </span>
    </code>
  </span>
  <span
    className="LogPaneLine"
    data-lineid={277}
  >
    <code
      className="LogPaneLine-content"
    >
      <span
        className={null}
        style={null}
      >
        

      </span>
    </code>
  </span>
  <span
    className="LogPaneLine"
    data-lineid={278}
  >
    <code
      className="LogPaneLine-content"
    >
      <span
        className={null}
        style={null}
      >
        

      </span>
    </code>
  </span>
  <span
    className="LogPaneLine"
    data-lineid={279}
  >
    <code
      className="LogPaneLine-content"
    >
      <span
        className={null}
        style={null}
      >
          
      </span>
      <span
        className="ansi-blue"
        style={null}
      >
        ──┤ Building: 
      </span>
      <span
        className={null}
        style={null}
      >
        spoonerisms
      </span>
      <span
        className="ansi-blue"
        style={null}
      >
         ├──────────────────────────────────────────────
      </span>
      <span
        className={null}
        style={null}
      >
        

      </span>
    </code>
  </span>
  <span
    className="LogPaneLine"
    data-lineid={280}
  >
    <code
      className="LogPaneLine-content"
    >
      <span
        className={null}
        style={null}
      >
          
      </span>
      <span
        className="ansi-blue"
        style={null}
      >
        STEP 1/3 — 
      </span>
      <span
        className={null}
        style={null}
      >
        Building Dockerfile: [docker.io/library/spoonerisms]

      </span>
    </code>
  </span>
  <span
    className="LogPaneLine"
    data-lineid={281}
  >
    <code
      className="LogPaneLine-content"
    >
      <span
        className={null}
        style={null}
      >
          Building Dockerfile:

      </span>
    </code>
  </span>
  <span
    className="LogPaneLine"
    data-lineid={282}
  >
    <code
      className="LogPaneLine-content"
    >
      <span
        className={null}
        style={null}
      >
            FROM node:10

      </span>
    </code>
  </span>
  <span
    className="LogPaneLine"
    data-lineid={283}
  >
    <code
      className="LogPaneLine-content"
    >
      <span
        className={null}
        style={null}
      >
        

      </span>
    </code>
  </span>
  <span
    className="LogPaneLine"
    data-lineid={284}
  >
    <code
      className="LogPaneLine-content"
    >
      <span
        className={null}
        style={null}
      >
            ADD package.json /app/package.json

      </span>
    </code>
  </span>
  <span
    className="LogPaneLine"
    data-lineid={285}
  >
    <code
      className="LogPaneLine-content"
    >
      <span
        className={null}
        style={null}
      >
            ADD yarn.lock /app/yarn.lock

      </span>
    </code>
  </span>
  <span
    className="LogPaneLine"
    data-lineid={286}
  >
    <code
      className="LogPaneLine-content"
    >
      <span
        className={null}
        style={null}
      >
            RUN cd /app && yarn install

      </span>
    </code>
  </span>
  <span
    className="LogPaneLine"
    data-lineid={287}
  >
    <code
      className="LogPaneLine-content"
    >
      <span
        className={null}
        style={null}
      >
        

      </span>
    </code>
  </span>
  <span
    className="LogPaneLine"
    data-lineid={288}
  >
    <code
      className="LogPaneLine-content"
    >
      <span
        className={null}
        style={null}
      >
            ADD src /app

      </span>
    </code>
  </span>
  <span
    className="LogPaneLine"
    data-lineid={289}
  >
    <code
      className="LogPaneLine-content"
    >
      <span
        className={null}
        style={null}
      >
        

      </span>
    </code>
  </span>
  <span
    className="LogPaneLine"
    data-lineid={290}
  >
    <code
      className="LogPaneLine-content"
    >
      <span
        className={null}
        style={null}
      >
            ENTRYPOINT [ "node", "/app/index.js" ]

      </span>
    </code>
  </span>
  <span
    className="LogPaneLine"
    data-lineid={291}
  >
    <code
      className="LogPaneLine-content"
    >
      <span
        className={null}
        style={null}
      >
        

      </span>
    </code>
  </span>
  <span
    className="LogPaneLine"
    data-lineid={292}
  >
    <code
      className="LogPaneLine-content"
    >
      <span
        className={null}
        style={null}
      >
        

      </span>
    </code>
  </span>
  <span
    className="LogPaneLine"
    data-lineid={293}
  >
    <code
      className="LogPaneLine-content"
    >
      <span
        className={null}
        style={null}
      >
          
      </span>
      <span
        className="ansi-blue"
        style={null}
      >
          │ 
      </span>
      <span
        className={null}
        style={null}
      >
        Tarring context…

      </span>
    </code>
  </span>
  <span
    className="LogPaneLine"
    data-lineid={294}
  >
    <code
      className="LogPaneLine-content"
    >
      <span
        className={null}
        style={null}
      >
              ╎ Created tarball (size: 459 kB)

      </span>
    </code>
  </span>
  <span
    className="LogPaneLine"
    data-lineid={295}
  >
    <code
      className="LogPaneLine-content"
    >
      <span
        className={null}
        style={null}
      >
          
      </span>
      <span
        className="ansi-blue"
        style={null}
      >
          │ 
      </span>
      <span
        className={null}
        style={null}
      >
        Building image

      </span>
    </code>
  </span>
  <span
    className="LogPaneLine"
    data-lineid={296}
  >
    <code
      className="LogPaneLine-content"
    >
      <span
        className={null}
        style={null}
      >
          [Tiltfile] Beginning Tiltfile execution

      </span>
    </code>
  </span>
  <span
    className="LogPaneLine"
    data-lineid={297}
  >
    <code
      className="LogPaneLine-content"
    >
      <span
        className={null}
        style={null}
      >
          [Tiltfile] Running \`"whoami"\`

      </span>
    </code>
  </span>
  <span
    className="LogPaneLine"
    data-lineid={298}
  >
    <code
      className="LogPaneLine-content"
    >
      <span
        className={null}
        style={null}
      >
          [Tiltfile]        HI

      </span>
    </code>
  </span>
  <span
    className="LogPaneLine"
    data-lineid={299}
  >
    <code
      className="LogPaneLine-content"
    >
      <span
        className={null}
        style={null}
      >
          [Tiltfile] Running \`"m4 -Dvarowner=dan "deploy/fe.yaml""\`

      </span>
    </code>
  </span>
  <span
    className="LogPaneLine"
    data-lineid={300}
  >
    <code
      className="LogPaneLine-content"
    >
      <span
        className={null}
        style={null}
      >
          [Tiltfile] Running \`"m4 -Dvarowner=dan "deploy/vigoda.yaml""\`

      </span>
    </code>
  </span>
  <span
    className="LogPaneLine"
    data-lineid={301}
  >
    <code
      className="LogPaneLine-content"
    >
      <span
        className={null}
        style={null}
      >
          [Tiltfile] Running \`"m4 -Dvarowner=dan "deploy/snack.yaml""\`

      </span>
    </code>
  </span>
  <span
    className="LogPaneLine"
    data-lineid={302}
  >
    <code
      className="LogPaneLine-content"
    >
      <span
        className={null}
        style={null}
      >
          [Tiltfile] Running \`"m4 -Dvarowner=dan "deploy/doggos.yaml""\`

      </span>
    </code>
  </span>
  <span
    className="LogPaneLine"
    data-lineid={303}
  >
    <code
      className="LogPaneLine-content"
    >
      <span
        className={null}
        style={null}
      >
          [Tiltfile] Running \`"m4 -Dvarowner=dan "deploy/fortune.yaml""\`

      </span>
    </code>
  </span>
  <span
    className="LogPaneLine"
    data-lineid={304}
  >
    <code
      className="LogPaneLine-content"
    >
      <span
        className={null}
        style={null}
      >
          [Tiltfile] Running \`"m4 -Dvarowner=dan "deploy/hypothesizer.yaml""\`

      </span>
    </code>
  </span>
  <span
    className="LogPaneLine"
    data-lineid={305}
  >
    <code
      className="LogPaneLine-content"
    >
      <span
        className={null}
        style={null}
      >
          [Tiltfile] Running \`"m4 -Dvarowner=dan "deploy/spoonerisms.yaml""\`

      </span>
    </code>
  </span>
  <span
    className="LogPaneLine"
    data-lineid={306}
  >
    <code
      className="LogPaneLine-content"
    >
      <span
        className={null}
        style={null}
      >
          [Tiltfile] Running \`"m4 -Dvarowner=dan "deploy/emoji.yaml""\`

      </span>
    </code>
  </span>
  <span
    className="LogPaneLine"
    data-lineid={307}
  >
    <code
      className="LogPaneLine-content"
    >
      <span
        className={null}
        style={null}
      >
          [Tiltfile] Running \`"m4 -Dvarowner=dan "deploy/words.yaml""\`

      </span>
    </code>
  </span>
  <span
    className="LogPaneLine"
    data-lineid={308}
  >
    <code
      className="LogPaneLine-content"
    >
      <span
        className={null}
        style={null}
      >
          [Tiltfile] Running \`"m4 -Dvarowner=dan "deploy/secrets.yaml""\`

      </span>
    </code>
  </span>
  <span
    className="LogPaneLine"
    data-lineid={309}
  >
    <code
      className="LogPaneLine-content"
    >
      <span
        className={null}
        style={null}
      >
          [Tiltfile] Running \`"m4 -Dvarowner=dan "deploy/job.yaml""\`

      </span>
    </code>
  </span>
  <span
    className="LogPaneLine"
    data-lineid={310}
  >
    <code
      className="LogPaneLine-content"
    >
      <span
        className={null}
        style={null}
      >
          [Tiltfile] Running \`"m4 -Dvarowner=dan "deploy/sleeper.yaml""\`

      </span>
    </code>
  </span>
  <span
    className="LogPaneLine"
    data-lineid={311}
  >
    <code
      className="LogPaneLine-content"
    >
      <span
        className={null}
        style={null}
      >
          [Tiltfile] Running \`"m4 -Dvarowner=dan "deploy/hello_world.yaml""\`

      </span>
    </code>
  </span>
  <span
    className="LogPaneLine"
    data-lineid={312}
  >
    <code
      className="LogPaneLine-content"
    >
      <span
        className={null}
        style={null}
      >
          [Tiltfile] Running \`"m4 -Dvarowner=dan "deploy/tick.yaml""\`

      </span>
    </code>
  </span>
  <span
    className="LogPaneLine"
    data-lineid={313}
  >
    <code
      className="LogPaneLine-content"
    >
      <span
        className={null}
        style={null}
      >
          vigoda      ┊ 2019/04/10 15:37:47 Server status: All good

      </span>
    </code>
  </span>
  <span
    className="LogPaneLine"
    data-lineid={314}
  >
    <code
      className="LogPaneLine-content"
    >
      <span
        className={null}
        style={null}
      >
          [Tiltfile] WARNING: This Tiltfile is using k8s resource assembly version 1, which has been deprecated. It will no longer be supported after 2019-04-17. Sorry for the inconvenience! See https://tilt.dev/resource_assembly_migration.html for information on how to migrate.

      </span>
    </code>
  </span>
  <span
    className="LogPaneLine"
    data-lineid={315}
  >
    <code
      className="LogPaneLine-content"
    >
      <span
        className={null}
        style={null}
      >
          [Tiltfile]

      </span>
    </code>
  </span>
  <span
    className="LogPaneLine"
    data-lineid={316}
  >
    <code
      className="LogPaneLine-content"
    >
      <span
        className={null}
        style={null}
      >
          [Tiltfile] Successfully loaded Tiltfile

      </span>
    </code>
  </span>
  <span
    className="LogPaneLine"
    data-lineid={317}
  >
    <code
      className="LogPaneLine-content"
    >
      <span
        className={null}
        style={null}
      >
          doggos      ┊ [doggos] 2019/04/10 15:37:45 Starting Doggos Service on :8083

      </span>
    </code>
  </span>
  <span
    className="LogPaneLine"
    data-lineid={318}
  >
    <code
      className="LogPaneLine-content"
    >
      <span
        className={null}
        style={null}
      >
          doggos      ┊ [sidecar] I'm a loud sidecar! [Wed Apr 10 15:37:46 UTC 2019]

      </span>
    </code>
  </span>
  <span
    className="LogPaneLine"
    data-lineid={319}
  >
    <code
      className="LogPaneLine-content"
    >
      <span
        className={null}
        style={null}
      >
          doggos      ┊ [sidecar] I'm a loud sidecar! [Wed Apr 10 15:37:48 UTC 2019]

      </span>
    </code>
  </span>
  <span
    className="LogPaneLine"
    data-lineid={320}
  >
    <code
      className="LogPaneLine-content"
    >
      <span
        className={null}
        style={null}
      >
          doggos      ┊ [doggos] 2019/04/10 15:37:49 Heartbeat

      </span>
    </code>
  </span>
  <span
    className="LogPaneLine"
    data-lineid={321}
  >
    <code
      className="LogPaneLine-content"
    >
      <span
        className={null}
        style={null}
      >
              ╎ [1/5] FROM docker.io/library/node:10

      </span>
    </code>
  </span>
  <span
    className="LogPaneLine"
    data-lineid={322}
  >
    <code
      className="LogPaneLine-content"
    >
      <span
        className={null}
        style={null}
      >
              ╎ [2/5] ADD package.json /app/package.json

      </span>
    </code>
  </span>
  <span
    className="LogPaneLine"
    data-lineid={323}
  >
    <code
      className="LogPaneLine-content"
    >
      <span
        className={null}
        style={null}
      >
              ╎ [3/5] ADD yarn.lock /app/yarn.lock

      </span>
    </code>
  </span>
  <span
    className="LogPaneLine"
    data-lineid={324}
  >
    <code
      className="LogPaneLine-content"
    >
      <span
        className={null}
        style={null}
      >
              ╎ [4/5] RUN cd /app && yarn install

      </span>
    </code>
  </span>
  <span
    className="LogPaneLine"
    data-lineid={325}
  >
    <code
      className="LogPaneLine-content"
    >
      <span
        className={null}
        style={null}
      >
              ╎ [5/5] ADD src /app

      </span>
    </code>
  </span>
  <div
    className="sc-bwzfXH bPLpVx logEnd"
  >
    █
  </div>
</section>
`;
